force-app/main/default/objects/Integration_Cache_Config__mdt/Integration_Cache_Config__mdt.object-meta.xml
<CustomObject>
    <label>Integration Cache Config</label>
    <pluralLabel>Integration Cache Config</pluralLabel>
</CustomObject>