force-app/main/default/objects/Integration_Cache_Config__mdt/fields/CachePurpose__c.field-meta.xml
<CustomField>
    <fullName>CachePurpose__c</fullName>
    <label>CachePurpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERP_LOOKUP</fullName>
                <default>true</default>
                <label>ERP_LOOKUP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>