force-app/main/default/objects/Integration_Cache_Config__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Key</label>
    <length>160</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>