force-app/main/default/objects/Integration_Cache_Config__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>ObjectApiName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>