force-app/main/default/objects/Integration_Cache_Config__mdt/fields/TTLSeconds__c.field-meta.xml
<CustomField>
    <fullName>TTLSeconds__c</fullName>
    <label>TTLSeconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>